--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,13 +45,14 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Workspace</a>
+        <a class="navbar-brand" href="#">Testquisite</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
+          <% if user_signed_in? %>
           <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
+            <li><%= link_to "Projects", projects_path  %></li>
+            <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
           </ul>
+          <% end %>
         </div>
       </div>
     </div>
